장소, 빌딩 등록 시에 챌린지 기여 정보 저장하기 (#209)
* GetChallenge 테스트코드 작성

* GetChallenge 구현

* 테스트 업데이트

* Accessibility 등록 시에 만족하는 챌린지 기여도 높이기

* Use Challenge Address
