# app-server/subprojects/bounded_context/accessibility/application/src/main/kotlin/club/staircrusher/accessibility/application/port/in/result/RegisterPlaceAccessibilityResult.kt
@@ -3,8 +3,10 @@ package club.staircrusher.accessibility.application.port.`in`.result
 import club.staircrusher.accessibility.application.AccessibilityRegisterer
 import club.staircrusher.accessibility.domain.model.PlaceAccessibility
 import club.staircrusher.accessibility.domain.model.PlaceAccessibilityComment
+import club.staircrusher.place.domain.model.Place
 
 data class RegisterPlaceAccessibilityResult(
+    val place: Place,
     val placeAccessibility: PlaceAccessibility,
     val placeAccessibilityComment: PlaceAccessibilityComment?,
     val accessibilityRegisterer: AccessibilityRegisterer?,
